tests/errors/undefined_symbol.dang
# Test undefined symbol error
pub x = undefined_var